@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/alchemy.c: Doxygen documentation, no functional change.
+Nicolas Weeger 2007-05-08
+
 utils/mapper.c: new parameter, -listunusedmaps, that'll generate a maps.unused file.
 Nicolas Weeger 2007-05-07
 
